test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_explicit_conversion_as_suffix.sol
contract C {
    function f() pure public {
        1 uint;
    }
}
// ----
// ParserError 2314: (54-58): Expected ';' but got 'uint'
